# dialog-service

./: .gitignore  ConversationInstruction.md  LICENSE  README.md
actionsService/src/: CMakeLists.txt  YarpUtils.cpp  actionsservice.cpp
iit/: CMakeLists.txt  README.md  package-lock.json  package.json  start.sh  yarp.js
iit/YarpJS/include/: YarpJS.h  YarpJS_Bottle.h  YarpJS_BufferedPort.h  YarpJS_BufferedPort_Bottle.h  YarpJS_BufferedPort_Image.h  YarpJS_BufferedPort_Sound.h  YarpJS_Callback.h  YarpJS_Image.h  YarpJS_Network.h  YarpJS_RPCPort.h  YarpJS_Sound.h  YarpJS_Wrapper.h
iit/YarpJS/src/: YarpJS.cpp  YarpJS_Bottle.cpp  YarpJS_BufferedPort.cpp  YarpJS_BufferedPort_Bottle.cpp  YarpJS_BufferedPort_Image.cpp  YarpJS_BufferedPort_Sound.cpp  YarpJS_Image.cpp  YarpJS_Network.cpp  YarpJS_RPCPort.cpp  YarpJS_Sound.cpp  _YarpJS_SelfRegister.cpp
iit/dialog-example/: app.js  curl.txt  log_test.txt  package-lock.json  package.json  server.js  yarp_port.js
iit/dialog-example/playTTS/: audioPlay.js  package-lock.json
iit/dialog-example/routes/: conversation.js  speech-to-text-file.js  speech-to-text.js  text-to-speech-file.js  text-to-speech.js  visual-recognition.js
iit/dialog-example/routes/interesting/: SpeechToTextV1.js  text-to-speech-file.js
iit/dialog-example/training/: car_workspace.json
iit/dialog-example/ui/: IBM_templates.js  functions.js  index.html
iit/dialog-example/ui/ibm/: speech-to-text-file-PlayTrascribe.js  speech-to-text-file.js  speech-to-text.js  synthesis.js  text-to-speech.js
iit/dialog-example/ui/js/: conversationResponse.js
iit/examples/: examples_https.js  index.html  mystyle_examples_https.css
iit/examples/assistant_TTS_SST/: IBM_templates.js  README.md  functions.js  index.html  mystyle.css
iit/examples/documentation/: README.html  README.md  index.html
iit/js/: yarp.js
iit/visual-recognition/: package-lock.json  visual.js
r1client/: R1Client.sh  compile.sh  r1_stamp.txt
r1client/src/: CMakeLists.txt  R1Client.bak  R1Client.cpp  R1Client_new.cpp.bak  actionsservice.cpp  r1_simulator.cpp
